@@ -33,7 +33,7 @@
     <h1>Template Engine for SQL</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/twowaysql"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/twowaysql" class="numbers">0.3.0</a>
+      <a href="http://rubyforge.org/projects/twowaysql" class="numbers">0.4.0</a>
     </div>
     <h1>&#x2192; &#8216;twowaysql&#8217;</h1>
 
